<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_2"
    android:orientation="vertical"
    tools:context=".AdminInputActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_form"
            android:textColor="#000000"
            android:textSize="20sp"
            />
    </LinearLayout>

    <ScrollView
        android:id="@+id/AddEventsLayoutID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/EventTitleEditTextID"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/edittext_design"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry"
                android:inputType="text"
                android:hint="@string/enter_title" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="#000000"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/EventDescriptionEditTextID"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/edittext_design"
                android:padding="10dp"
                android:gravity="top"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/title_image"
                    android:textColor="#000000"
                    android:textSize="20sp"

                    />

                <LinearLayout
                    android:id="@+id/EventTitleImageID"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/edittext_design"
                    android:padding="5dp"
                    android:layout_marginTop="4dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/select_image"
                        android:gravity="center_vertical"
                        android:textColor="@color/Background"
                        android:textSize="15dp"
                        android:layout_marginLeft="15dp"
                        android:foreground="?selectableItemBackground"

                        />

                    <ImageView

                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/upload_image"
                        android:foreground="?selectableItemBackground"
                        android:layout_marginRight="10dp"
                        />

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="Poster Image"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    />
                <LinearLayout
                    android:id="@+id/EventPosterImageID"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/edittext_design"
                    android:padding="5dp"
                    android:layout_marginTop="4dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="select image"
                        android:gravity="center_vertical"
                        android:textColor="@color/Background"
                        android:textSize="15dp"
                        android:layout_marginLeft="15dp"
                        android:foreground="?selectableItemBackground"
                        />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="13dp"
                    android:src="@drawable/upload_image"
                    android:foreground="?selectableItemBackground"
                    android:layout_marginRight="10dp"
                    />

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Date : "
                    android:textSize="20sp"
                    android:textColor="#000000"
                    />
                <EditText
                    android:id="@+id/EventDateTextViewID"
                    android:layout_width="200dp"
                    android:layout_height="35dp"
                    android:paddingLeft="10dp"
                    android:background="@drawable/edittext_design"
                    android:hint="select date"
                    />
                <Button
                    android:id="@+id/EventSelectDateButtonID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="select date"
                    android:textColor="#ffffff"
                    android:textSize="12dp"
                    android:backgroundTint="#5972FF"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Location : "
                    android:textSize="20sp"
                    android:textColor="#000000"
                    />
                <EditText
                    android:id="@+id/EventLocationID"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/edittext_design"
                    android:paddingLeft="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Time : "
                    android:textSize="20sp"
                    android:textColor="#000000"
                    />
                <EditText
                    android:id="@+id/EventTimeID"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/edittext_design"
                    android:layout_marginLeft="31dp"
                    android:paddingLeft="10dp"
                    android:hint="From"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                >
                <Button
                    android:id="@+id/EventStartTimeButtonID"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="Start Event"
                    android:textColor="#ffffff"
                    android:layout_marginLeft="100dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:backgroundTint="#5972FF"
                    />
                <Button
                    android:id="@+id/EventEndTimeButtonID"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="End Event"
                    android:backgroundTint="#5972FF"
                    android:textColor="#ffffff"
                    android:layout_marginLeft="20dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Doctor : "
                    android:textSize="20sp"
                    android:textColor="#000000"
                    />
                <EditText
                    android:id="@+id/EventDoctorID"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/edittext_design"
                    android:layout_marginLeft="15dp"
                    android:paddingLeft="10dp"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/EventCreateButtonID"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Post Event"
                android:layout_marginTop="30dp"
                android:backgroundTint="#5972FF"
                android:textColor="#FFFFFF"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="40dp"
                />
        </LinearLayout>
    </ScrollView>
    <ScrollView
        android:id="@+id/AddDailyTipsLayoutID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Title : "
                    android:textColor="#000000"
                    android:textSize="25sp"
                    />
                <EditText
                    android:id="@+id/DailyTipsTitleID"
                    android:paddingLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edittext_design"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Image"
                    android:textSize="25sp"
                    android:textColor="#000000"
                    />
                <ImageView
                    android:id="@+id/DailyTipsImageID"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/upload_image"
                    android:background="#000000"
                    android:layout_marginLeft="30dp"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Description : "
                android:textColor="#000000"
                android:textSize="25sp"
                android:layout_marginTop="15dp"
                />
            <EditText
                android:id="@+id/DailyTipsDescriptionID"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/edittext_design"
                android:gravity="top"
                android:padding="10dp"
                />
            <Button
                android:id="@+id/DailyTipsPostButtonID"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Post Tips"
                android:layout_marginTop="30dp"
                android:backgroundTint="#5972FF"
                android:textColor="#FFFFFF"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>
    </ScrollView>
    <ScrollView
        android:id="@+id/AddEmergencyAmbulanceLayoutID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical"
            android:gravity="center"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hospital Name :"
                    android:textSize="25sp"
                    android:textColor="#000000"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edittext_design"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="40dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hospital Location :"
                    android:textSize="25sp"
                    android:textColor="#000000"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edittext_design"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Phone Number :"
                    android:textSize="25sp"
                    android:textColor="#000000"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edittext_design"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>